--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Implementation of the tests for rotational symmetry on the
      symmetry against new classes of hyperspherical distributions". The
      package implements the proposed distributions on the hypersphere
      based on the tangent-normal decomposition. It also allows for the
-     replication of the data applications considered in the paper.
+     replication of the data application considered in the paper.
 License: GPL-3
 LazyData: true
 Depends:
