--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.0-4
-Date: 2019-05-10
+Version: 1.0-5
+Date: 2019-05-13
 Authors@R: c(
      person(given = "Eduardo", family = "García-Portugués",
             role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es"),
@@ -10,11 +10,11 @@ Authors@R: c(
      person(given = "Thomas", family = "Verdebout", role = "aut")
      )
 Description: Implementation of the tests for rotational symmetry on the
-     hypersphere proposed in the paper "On optimal tests for rotational
-     symmetry against new classes of hyperspherical distributions". The
-     package implements the proposed distributions on the hypersphere
-     based on the tangent-normal decomposition. It also allows for the
-     replication of the data application considered in the paper.
+     hypersphere proposed in García-Portugués, Paindaveine and Verdebout
+     (2019) <arXiv:1706.05030>. The package also implements the proposed
+     distributions on the hypersphere, based on the tangent-normal
+     decomposition, and allows for the replication of the data
+     application considered in the paper.
 License: GPL-3
 LazyData: true
 Depends:
