--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.0-5
-Date: 2019-05-13
+Version: 1.0-6
+Date: 2019-05-19
 Authors@R: c(
      person(given = "Eduardo", family = "García-Portugués",
             role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es"),
@@ -19,8 +19,7 @@ License: GPL-3
 LazyData: true
 Depends:
     R (>= 3.4.0),
-    Rcpp,
-    RcppZiggurat
+    Rcpp
 Suggests:
     rgl,
     viridisLite
