--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ env:
     - PKG_LIBS = "-llapack"
     - PKG_CXXFLAGS = "-std=c++11"
 sudo: required
-script:
-  - sudo unlink /usr/bin/gcc && sudo ln -s /usr/bin/gcc-5 /usr/bin/gcc
-  - gcc --version
+# script:
+#   - sudo unlink /usr/bin/gcc && sudo ln -s /usr/bin/gcc-5 /usr/bin/gcc
+#   - gcc --version
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    packages:
-    - gcc-5
-    - g++-5
-    - libgsl0-dev
+#     packages:
+#     - gcc-5
+#     - g++-5
+#     - libgsl0-dev
