--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.0-6
-Date: 2019-08-26
+Version: 1.0.7
+Date: 2020-03-08
 Authors@R: c(
      person(given = "Eduardo", family = "García-Portugués",
             role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es"),
@@ -11,7 +11,7 @@ Authors@R: c(
      )
 Description: Implementation of the tests for rotational symmetry on the
      hypersphere proposed in García-Portugués, Paindaveine and Verdebout
-     (2019) <arXiv:1706.05030>. The package also implements the proposed
+     (2020) <doi:10.1080/01621459.2019.1665527>. The package also implements the proposed
      distributions on the hypersphere, based on the tangent-normal
      decomposition, and allows for the replication of the data
      application considered in the paper.
@@ -27,4 +27,5 @@ LinkingTo: Rcpp, RcppArmadillo
 URL: https://github.com/egarpor/rotasym
 BugReports: https://github.com/egarpor/rotasym
 Encoding: UTF-8
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
+Roxygen: list(old_usage = TRUE)
