--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,20 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.0.7
-Date: 2020-03-08
+Version: 1.0.8
+Date: 2020-07-29
 Authors@R: c(
      person(given = "Eduardo", family = "García-Portugués",
             role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es"),
      person(given = "Davy", family = "Paindaveine", role = "aut"),
      person(given = "Thomas", family = "Verdebout", role = "aut")
      )
-Description: Implementation of the tests for rotational symmetry on the
-     hypersphere proposed in García-Portugués, Paindaveine and Verdebout
-     (2020) <doi:10.1080/01621459.2019.1665527>. The package also implements the proposed
-     distributions on the hypersphere, based on the tangent-normal
-     decomposition, and allows for the replication of the data
-     application considered in the paper.
+Description: Implementation of the tests for rotational symmetry on the hypersphere
+     proposed in García-Portugués, Paindaveine and Verdebout (2020) 
+     <doi:10.1080/01621459.2019.1665527>. The package also implements the
+     proposed distributions on the hypersphere, based on the tangent-normal
+     decomposition, and allows for the replication of the data application
+     considered in the paper.
 License: GPL-3
 LazyData: true
 Depends:
