--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.0.8
-Date: 2020-07-29
+Version: 1.0.9
+Date: 2020-08-25
 Authors@R: c(
      person(given = "Eduardo", family = "García-Portugués",
-            role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es"),
+            role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es",
+            comment = c(ORCID = "0000-0002-9224-4111")),
      person(given = "Davy", family = "Paindaveine", role = "aut"),
      person(given = "Thomas", family = "Verdebout", role = "aut")
      )
