--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.1.5
-Date: 2023-08-19
+Version: 1.1.6
+Date: 2025-07-15
 Authors@R: c(
     person(given = "Eduardo", family = "García-Portugués",
            role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es",
@@ -23,10 +23,12 @@ Depends:
     Rcpp
 Suggests:
     rgl,
+    testthat (>= 3.0.0),
     viridisLite
 LinkingTo: Rcpp, RcppArmadillo
 URL: https://github.com/egarpor/rotasym
 BugReports: https://github.com/egarpor/rotasym
 Encoding: UTF-8
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Roxygen: list(old_usage = TRUE)
+Config/testthat/edition: 3
