--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Suggests:
     viridisLite
 LinkingTo: Rcpp, RcppArmadillo
 URL: https://github.com/egarpor/rotasym
-BugReports: https://github.com/egarpor/rotasym
+BugReports: https://github.com/egarpor/rotasym/issues
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 Roxygen: list(old_usage = TRUE)
