--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rotasym
 Type: Package
 Title: Tests for Rotational Symmetry on the Hypersphere
-Version: 1.1.5
-Date: 2023-08-19
+Version: 1.2.0
+Date: 2025-07-27
 Authors@R: c(
     person(given = "Eduardo", family = "García-Portugués",
            role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es",
@@ -19,14 +19,17 @@ Description: Implementation of the tests for rotational symmetry on the
 License: GPL-3
 LazyData: true
 Depends:
-    R (>= 3.4.0),
+    R (>= 3.5.0),
     Rcpp
 Suggests:
-    rgl,
+    dplyr,
+    scatterplot3d,
+    testthat (>= 3.0.0),
     viridisLite
 LinkingTo: Rcpp, RcppArmadillo
 URL: https://github.com/egarpor/rotasym
-BugReports: https://github.com/egarpor/rotasym
+BugReports: https://github.com/egarpor/rotasym/issues
 Encoding: UTF-8
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Roxygen: list(old_usage = TRUE)
+Config/testthat/edition: 3
